[gd_scene load_steps=7 format=3 uid="uid://dbo1hyv7it7gk"]

[ext_resource type="Texture2D" uid="uid://ddrswwlqp4iti" path="res://art/DifficultySelectBackground.png" id="1_3f8jr"]
[ext_resource type="Script" path="res://ui/difficulty_select_scene.gd" id="1_03sgn"]
[ext_resource type="Texture2D" uid="uid://clcul0is5xe5p" path="res://art/DarknessEffect.png" id="1_yiybu"]

[sub_resource type="Animation" id="Animation_adkew"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EasyButton:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MediumButton:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HardButton:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("NightmareButton:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_u6ex6"]
resource_name = "Start"
length = 2.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EasyButton:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MediumButton:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HardButton:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("NightmareButton:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8kqyl"]
_data = {
"RESET": SubResource("Animation_adkew"),
"Start": SubResource("Animation_u6ex6")
}

[node name="DifficultySelectScene" type="Node2D"]
script = ExtResource("1_03sgn")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_3f8jr")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="EasyButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 512.0
offset_top = 152.0
offset_right = 640.0
offset_bottom = 216.0
text = "Easy"

[node name="MediumButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 496.0
offset_top = 248.0
offset_right = 656.0
offset_bottom = 312.0
text = "Medium
"

[node name="HardButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 480.0
offset_top = 344.0
offset_right = 672.0
offset_bottom = 408.0
text = "Hard"

[node name="NightmareButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 464.0
offset_top = 440.0
offset_right = 688.0
offset_bottom = 504.0
text = "Nightmare"

[node name="DarknessEffect" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.588235)
position = Vector2(576, 328)
texture = ExtResource("1_yiybu")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8kqyl")
}

[connection signal="pressed" from="EasyButton" to="." method="_on_easy_button_pressed"]
[connection signal="pressed" from="MediumButton" to="." method="_on_medium_button_pressed"]
[connection signal="pressed" from="HardButton" to="." method="_on_hard_button_pressed"]
[connection signal="pressed" from="NightmareButton" to="." method="_on_nightmare_button_pressed"]
